--- a/css/main.css
+++ b/css/main.css
@@ -66,4 +66,42 @@ h2 {
   color: #fff;
 }
 
+.hover-box {
+  color: #fff;
+}
+
+.hover-box-caption {
+  bottom: -4em;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, .5));
+  text-shadow: 1px 1px 5px rgba(0, 0, 0, .9);
+  transition: all .2s linear;
+}
+
+.hover-box:hover .hover-box-caption {
+  bottom: 0;
+}
+
+.crop {
+  overflow: hidden;
+}
+
+.hover-box-img {
+  filter: grayscale(100%);
+  transition: all .2s linear;
+}
+
+.hover-box:focus {
+  z-index: 10;
+}
+
+.hover-box:hover .hover-box-caption,
+.hover-box:focus .hover-box-caption {
+  bottom: 0;
+}
+
+.hover-box:hover .hover-box-img,
+.hover-box:focus .hover-box-img {
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
 }
