--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@ html {
 }
 
 h1 {
-  font-weight: 700;
   color: #fff;
 }
 
@@ -12,15 +11,14 @@ header {
 }
 
 a {
-  font-weight: 400;
   text-decoration: none;
   color: #fff;
 }
 
 .banner {
   background-image: linear-gradient(to bottom, rgba(247, 160, 225, 0), rgba(247, 160, 225, .8)), url("../images/banner.jpg");
-  background-position: left bottom, center bottom;
-  background-size: cover;
+  background-position: bottom;
+  background-size: auto;
   background-repeat: no-repeat;
   height: 400px;
 }
@@ -103,5 +101,4 @@ h2 {
 .hover-box:focus .hover-box-img {
   filter: grayscale(0);
   transform: scale(1.1);
-}
 }
