--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ a {
 
 .banner {
   background-image: linear-gradient(to bottom, rgba(247, 160, 225, 0), rgba(247, 160, 225, .8)), url("../images/banner.jpg");
-  background-position: bottom;
+  background-position: left bottom, center bottom;
   background-size: auto;
   background-repeat: no-repeat;
   height: 400px;
