--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ h1 {
 }
 
 header {
-  background-color: #E21D79;
+  background-color: #e21d79;
 }
 
 a {
@@ -24,13 +24,13 @@ a {
 .nav a {
   text-decoration: none;
   color: #fff;
-  border: 3px solid #C30290;
-  background-color: #E21D79;
+  border: 3px solid #c30290;
+  background-color: #880d49;
   border-radius: 8px;
 }
 
 .nav a:hover {
-  color: #E21D79;
+  color: #e21d79;
   background-color: #fff;
 }
 
@@ -55,17 +55,21 @@ section {
 }
 
 h2 {
-  color: #E21D79;
+  color: #e21d79;
 }
 
 .btn {
   border-color: rgba(226, 29, 121, 1);
-  color: #E21D79;
+  color: #880d49;
+}
+
+.btn-ghost:hover {
+  background-color: #880d49
 }
 
 .btn:hover {
   border-color: #fff;
-  background-color: #E21D79;
+  background-color: #e21d79;
   color: #fff;
 }
 
